--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Hellow world</h1>
+<h1>Одержать сто побед в ста битвах — это не вершина воинского искусства. Повергнуть врага без сражения — вот вершина.</h1>
+<h2></h2>
+<h2>Сунь Цзы</h2>
 
 <table>
   <thead>
