--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Одержать сто побед в ста битвах — это не вершина воинского искусства. 
-Повергнуть врага без сражения — вот вершина.</h1>
+<h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1>
+<h1>Повергнуть врага без сражения — вот вершина.</h1>
 <h2></h2>
 <h2>Сунь Цзы</h2>
 
