--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -4,6 +4,11 @@
 <h1>Повергнуть врага без сражения — вот вершина.</h1>
 <h2></h2>
 <h2>Сунь Цзы</h2>
+<h2></h2>
+<h2></h2>
+<h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2>
+
+<img src="./assets/images/my_ror.png" alt="Преободряющая картинка">
 
 <table>
   <thead>
