--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -8,7 +8,7 @@
 <h2></h2>
 <h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2>
 
-<img src="../assets/images/my_ror.png" alt="Преободряющая картинка">
+<img src="../assets/images/my_ror.jpg" alt="Преободряющая картинка">
 
 <table>
   <thead>
