--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -1,22 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1>
-<h1>Повергнуть врага без сражения — вот вершина.</h1>
-<h2></h2>
-<h2>Сунь Цзы</h2>
-<h2></h2>
-<h2></h2>
-<h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2>
+<p><h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1></p>
+<p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
+<p><h2></h2></p>
+<p><h2>Сунь Цзы</h2></p>
+<p><h2></h2></p>
+<p><h2></h2></p>
+<p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
 
-<img src="../../../assets/images/my_ror.jpg">
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-</table>
-
-<br>
+<p><img src="../../assets/images/my_ror.jpg"></p>
