--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -5,4 +5,4 @@
 <p><h2>Сунь Цзы</h2></p>
 <p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
 
-<p><img src="../../assets/images/my_ror.jpg"></p>
+<p><img src="my_ror.jpg"></p>
