--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -1,8 +1,14 @@
-<p id="notice"><%= notice %></p>
-
-<p><h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1></p>
-<p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
-<p><h2>Сунь Цзы</h2></p>
-<p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
-
-<p><img src="my_ror.jpg"></p>
+<!DOCTYPE HTML>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <p id="notice"><%= notice %></p>
+    <p><h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1></p>
+    <p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
+    <p><h2>Сунь Цзы</h2></p>
+    <p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
+    <p><img src="../../assets/images/my_ror.jpg"></p>
+  </body>
+</htmL>
