--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -9,6 +9,6 @@
     <p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
     <p><h2>Сунь Цзы</h2></p>
     <p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
-    <p><img src="/images/my_ror.jpg"/></p>
+    <p><img src="public/my_ror.jpg"/></p>
   </body>
 </htmL>
