--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -5,10 +5,12 @@
   </head>
   <body>
     <p id="notice"><%= notice %></p>
-    <p><h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1></p>
-    <p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
-    <p><h2>Сунь Цзы</h2></p>
-    <p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
-    <p><img src="/public/my_ror.jpg"></p>
+    <div>
+      <p><h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1></p>
+      <p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
+      <p><h2>Сунь Цзы</h2></p>
+      <p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
+      <p><img src="my_ror.jpg"></p>
+    </div>
   </body>
 </htmL>
