--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -10,6 +10,11 @@
       <p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
       <p><h2>Сунь Цзы</h2></p>
       <p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
+    </div>
+    <div>
+      <a href="rezume.html">Резюме создателя этой страницы - Воробьева Александра</a>
+    </div>
+    <div>
       <p><img src="my_ror.jpg"></p>
     </div>
   </body>
