--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -8,7 +8,8 @@
     <div>
       <p><h1>Одержать сто побед в ста битвах — это не вершина воинского искусства.</h1></p>
       <p><h1>Повергнуть врага без сражения — вот вершина.</h1></p>
-      <p><h2>Сунь Цзы</h2></p>
+      <p align="right"><h3>Сунь Цзы</h3></p>
+      <p></p>
       <p><h2>Данное приложение сделал Воробьв Александр, в рамках обучения RoR на курсах http://goodprogrammer.ru</h2></p>
     </div>
     <div>
